--- a/sqDalitzVis.html
+++ b/sqDalitzVis.html
@@ -7,8 +7,8 @@
 <input type='file' id = "input2"/>
 <br><img id="myImg2" src="#" height=0 width=0>
 
-<div id="canvas", width = 400, height = 400>Conventional Dalitz<br/></div>
-<div id="canvas2", width = 400, height = 400>Square Dalitz<br/></div>
+<div id="canvas", width = 400, height = 400, style="float: left; width : 30%" >Conventional Dalitz<br/></div>
+<div id="canvas2", width = 400, height = 400, style="float: left; width : 30%" >Square Dalitz<br/></div>
 
 <script type="text/javascript" src="sqDalitzVis.js"></script>
 
