Add masses as user input.

--- a/sqDalitzVis.html
+++ b/sqDalitzVis.html
@@ -2,13 +2,25 @@
 <html>
 <body>
 
+mParent: <input type="text" id="mP" size="2" name="mP">
+m1: <input type="text" id="m1" size="2" name="m1">
+m2: <input type="text" id="m2" size="2" name="m2">
+m3: <input type="text" id="m3" size="2" name="m3">
+
+<br>
+<br>
+
 <input type='file' id = "input1"/>
-<br><img id="myImg1" src="#" height=0 width=0>
+<img id="myImg1" src="#" height=0 width=0>
 <input type='file' id = "input2"/>
-<br><img id="myImg2" src="#" height=0 width=0>
+<img id="myImg2" src="#" height=0 width=0>
+
+<br>
+<br>
 
 <div id="canvas", width = 400, height = 400, style="float: left; width : 30%" >Conventional Dalitz<br/></div>
 <div id="canvas2", width = 400, height = 400, style="float: left; width : 30%" >Square Dalitz<br/></div>
+
 
 <script type="text/javascript" src="sqDalitzVis.js"></script>
 
