Add support for folded Dalit plots.

--- a/sqDalitzVis.html
+++ b/sqDalitzVis.html
@@ -6,6 +6,7 @@ mParent: <input type="text" id="mP" size="2" name="mP">
 m1: <input type="text" id="m1" size="2" name="m1">
 m2: <input type="text" id="m2" size="2" name="m2">
 m3: <input type="text" id="m3" size="2" name="m3">
+Folded: <input type="checkbox" id="fold" name="fold">
 
 <br>
 <br>
