Fix folding checkbox behaviour.

--- a/sqDalitzVis.html
+++ b/sqDalitzVis.html
@@ -11,10 +11,15 @@ Folded: <input type="checkbox" id="fold" name="fold">
 <br>
 <br>
 
-<input type='file' id = "input1"/>
+<!-- <input type='file' id = "input1"/>
 <img id="myImg1" src="#" height=0 width=0>
 <input type='file' id = "input2"/>
-<img id="myImg2" src="#" height=0 width=0>
+<img id="myImg2" src="#" height=0 width=0> -->
+
+<input type='file' id = "input1"/>
+<img id="myImg1" src="examples/B2Kpipi_C.png" height=0 width=0>
+<input type='file' id = "input2"/>
+<img id="myImg2" src="examples/B2Kpipi_S.png" height=0 width=0>
 
 <br>
 <br>
